[gd_scene load_steps=2 format=3 uid="uid://ckw0npaifhmyc"]

[ext_resource type="Script" path="res://Scripts/chooseLevel.gd" id="1_f5047"]

[node name="chooseLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5047")

[node name="menuButton" type="Button" parent="."]
layout_mode = 1
offset_left = 25.0
offset_top = 25.0
offset_right = 78.0
offset_bottom = 56.0
text = "menu"

[node name="levelsButtonsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -20.0
offset_right = 38.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="tutorialButton" type="Button" parent="levelsButtonsContainer"]
layout_mode = 2
text = "Tutorial"

[node name="levelOneButton" type="Button" parent="levelsButtonsContainer"]
layout_mode = 2
text = "levelOne"

[connection signal="pressed" from="menuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="levelsButtonsContainer/tutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="levelsButtonsContainer/levelOneButton" to="." method="_on_level_one_button_pressed"]
